# nitro-calc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: platform-resource-setup.cmake  qt-setup.cmake
resources/: qresource.qrc
resources/platform/: platform-resource-setup.cmake
resources/platform/linux/: desktop-gen.sh  template.desktop
resources/platform/macos/: gen-icns.sh
src/: main.cpp
